@@ -8,74 +8,123 @@ import com.baml.mav.aieutil.util.YamlConfig;
 public class ConnectionManager {
     private static final YamlConfig appConfig = new YamlConfig("application.yaml");
 
-    public record ConnInfo(String url, String user, String password) {
-        public ConnInfo {
-            Objects.requireNonNull(url, "URL cannot be null");
-            Objects.requireNonNull(user, "User cannot be null");
-            Objects.requireNonNull(password, "Password cannot be null");
+    public static class ConnInfo {
+        private final String url;
+        private final String user;
+        private final String password;
+
+        public ConnInfo(String url, String user, String password) {
+            this.url = Objects.requireNonNull(url, "URL cannot be null");
+            this.user = Objects.requireNonNull(user, "User cannot be null");
+            this.password = Objects.requireNonNull(password, "Password cannot be null");
+        }
+
+        public String getUrl() {
+            return url;
+        }
+
+        public String getUser() {
+            return user;
+        }
+
+        public String getPassword() {
+            return password;
         }
     }
 
-    private sealed interface ConnectionStrategy {
+    private interface ConnectionStrategy {
         String buildUrl();
+    }
 
-        record H2Jdbc(String database) implements ConnectionStrategy {
-            @Override
-            public String buildUrl() {
-                String template = appConfig.getRawValue("databases.h2.connection-string.jdbc-thin.template");
-                return String.format(template, database);
-            }
+    private static class H2Jdbc implements ConnectionStrategy {
+        private final String database;
+
+        public H2Jdbc(String database) {
+            this.database = database;
         }
 
-        record H2Memory(String database) implements ConnectionStrategy {
-            @Override
-            public String buildUrl() {
-                String template = appConfig.getRawValue("databases.h2.connection-string.jdbc-thin.template");
-                return String.format(template, "mem:" + database);
-            }
+        @Override
+        public String buildUrl() {
+            String template = appConfig.getRawValue("databases.h2.connection-string.jdbc-thin.template");
+            return String.format(template, database);
+        }
+    }
+
+    private static class H2Memory implements ConnectionStrategy {
+        private final String database;
+
+        public H2Memory(String database) {
+            this.database = database;
         }
 
-        record OracleJdbc(String host, String database) implements ConnectionStrategy {
-            @Override
-            public String buildUrl() {
-                try {
-                    String template = appConfig.getRawValue("databases.oracle.connection-string.jdbc-thin.template");
-                    int port = Integer
-                            .parseInt(appConfig.getRawValue("databases.oracle.connection-string.jdbc-thin.port"));
-                    return String.format(template, host, port, database);
-                } catch (Exception e) {
-                    throw ExceptionUtils.wrap(e,
-                            "Failed to build Oracle JDBC URL for host=" + host + ", database=" + database);
-                }
-            }
+        @Override
+        public String buildUrl() {
+            String template = appConfig.getRawValue("databases.h2.connection-string.jdbc-thin.template");
+            return String.format(template, "mem:" + database);
+        }
+    }
+
+    private static class OracleJdbc implements ConnectionStrategy {
+        private final String host;
+        private final String database;
+
+        public OracleJdbc(String host, String database) {
+            this.host = host;
+            this.database = database;
         }
 
-        record OracleLdap(String database) implements ConnectionStrategy {
-            @Override
-            public String buildUrl() {
-                try {
-                    String template = appConfig.getRawValue("databases.oracle.connection-string.ldap.template");
-                    int port = Integer.parseInt(appConfig.getRawValue("databases.oracle.connection-string.ldap.port"));
-                    String context = appConfig.getRawValue("databases.oracle.connection-string.ldap.context");
-                    String servers = String.join(",",
-                            appConfig.getRawValue("databases.oracle.connection-string.ldap.servers").split(","));
-                    return String.format(template, servers, port, database, context);
-                } catch (Exception e) {
-                    throw ExceptionUtils.wrap(e, "Failed to build Oracle LDAP URL for database=" + database);
-                }
+        @Override
+        public String buildUrl() {
+            try {
+                String template = appConfig.getRawValue("databases.oracle.connection-string.jdbc-thin.template");
+                int port = Integer
+                        .parseInt(appConfig.getRawValue("databases.oracle.connection-string.jdbc-thin.port"));
+                return String.format(template, host, port, database);
+            } catch (Exception e) {
+                throw ExceptionUtils.wrap(e,
+                        "Failed to build Oracle JDBC URL for host=" + host + ", database=" + database);
+            }
+        }
+    }
+
+    private static class OracleLdap implements ConnectionStrategy {
+        private final String database;
+
+        public OracleLdap(String database) {
+            this.database = database;
+        }
+
+        @Override
+        public String buildUrl() {
+            try {
+                String template = appConfig.getRawValue("databases.oracle.connection-string.ldap.template");
+                int port = Integer.parseInt(appConfig.getRawValue("databases.oracle.connection-string.ldap.port"));
+                String context = appConfig.getRawValue("databases.oracle.connection-string.ldap.context");
+                String servers = String.join(",",
+                        appConfig.getRawValue("databases.oracle.connection-string.ldap.servers").split(","));
+                return String.format(template, servers, port, database, context);
+            } catch (Exception e) {
+                throw ExceptionUtils.wrap(e, "Failed to build Oracle LDAP URL for database=" + database);
             }
         }
     }
 
     public static ConnInfo createConnection(String type, String database, String user, String password, String host) {
-        ConnectionStrategy strategy = switch (type) {
-            case "h2" -> host != null && !host.isBlank()
-                    ? new ConnectionStrategy.H2Jdbc(database)
-                    : new ConnectionStrategy.H2Memory(database);
-            default -> host != null && !host.isBlank()
-                    ? new ConnectionStrategy.OracleJdbc(host, database)
-                    : new ConnectionStrategy.OracleLdap(database);
-        };
+        ConnectionStrategy strategy;
+
+        if ("h2".equals(type)) {
+            if (host != null && !host.trim().isEmpty()) {
+                strategy = new H2Jdbc(database);
+            } else {
+                strategy = new H2Memory(database);
+            }
+        } else {
+            if (host != null && !host.trim().isEmpty()) {
+                strategy = new OracleJdbc(host, database);
+            } else {
+                strategy = new OracleLdap(database);
+            }
+        }
 
         return new ConnInfo(strategy.buildUrl(), user, password);
     }
